Fix script source case sensitivity for wahdahCalculatorRaw.js

--- a/views/tamu.html
+++ b/views/tamu.html
@@ -142,7 +142,7 @@
     </div>
   </nav>
 
-  <script src="/js/WahdahCalculatorRaw.js"></script>
+  <script src="/js/wahdahCalculatorRaw.js"></script>
   <script src="/js/wahdahAdabter.js"></script>
   <script src="/js/tamu.js"></script>
 </body>
