Fix script source name for wahdahAdapter.js

--- a/views/tamu.html
+++ b/views/tamu.html
@@ -143,7 +143,7 @@
   </nav>
 
   <script src="/js/wahdahCalculatorRaw.js"></script>
-  <script src="/js/wahdahAdabter.js"></script>
+  <script src="/js/wahdahAdapter.js"></script>
   <script src="/js/tamu.js"></script>
 </body>
 </html>
