--- a/views/tamu.html
+++ b/views/tamu.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Beranda Tamu</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="/css/tamu.css" />
 </head>
 <body>
@@ -85,10 +86,16 @@
         </div>
         
         <div class="export-tools">
-          <span>Export:</span>
-          <button class="btn-icon" onclick="exportPDF()">📄</button>
-          <button class="btn-icon" onclick="exportImage()">🖼️</button>
-        </div>
+  <button class="btn-download" onclick="exportPDF()">
+    <span class="material-symbols-outlined">description</span>
+    Download PDF
+  </button>
+  
+  <button class="btn-download" onclick="exportImage()">
+    <span class="material-symbols-outlined">image</span>
+    Download Gambar
+  </button>
+</div>
       </div>
 
       <div class="location-box">
