--- a/public/css/tamu.css
+++ b/public/css/tamu.css
@@ -283,6 +283,24 @@ body {
   direction: ltr !important;
   text-align: left !important;
 }
+.dzikir-nav-container {
+  display: flex;
+  gap: 10px;
+}
+
+.btn-nav {
+  background-color: #2e7d32; /* Warna hijau khas */
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.btn-nav:disabled {
+  background-color: #ccc;
+}
 
 /* NAVBAR BAWAH */
 .navbar {
