--- a/views/tamu.html
+++ b/views/tamu.html
@@ -359,7 +359,12 @@
     <span>Shalat</span>
     </div>
     <div class="nav" id="nav-quran" onclick="switchTab('quran')">
-      📅<span>Qur'an</span>
+    <dotlottie-player
+      src="/assets/masjid.json"                                                               background="transparent"
+      speed="1"                                                                             style="width: 28px; height: 28px; margin-bottom: 2px;"
+      loop
+      autoplay>
+      <span>Qur'an</span>
     </div>
     <div class="nav">
       ☰<span>Lainnya</span>
