--- a/views/tamu.html
+++ b/views/tamu.html
@@ -75,7 +75,7 @@
     <section class="menu-grid">
       <div class="menu-item" onclick="switchTab('dzikir')">🙏<p>Dzikir & Doa</p></div>
       <div class="menu-item" onclick="location.href='/raport'">📕<p>Raport Santri</p></div>
-      <div class="menu-item">🛏️<p>Kamar Santri</p></div>
+      <div class="menu-item" onclick="location.href='/kamar'">🛏️<p>Kamar Santri</p></div>
       <div class="menu-item">📖👥<p>Halaqah Qur'an</p></div>
       <div class="menu-item">📋<p>Santri Ujian</p></div>
       <div class="menu-item">📊<p>Struktur Organisasi</p></div>
