--- a/views/tamu.html
+++ b/views/tamu.html
@@ -360,7 +360,7 @@
     </div>
     <div class="nav" id="nav-quran" onclick="switchTab('quran')">
     <dotlottie-player
-      src="/assets/masjid.json"                                                               background="transparent"
+      src="/assets/book.json"                                                               background="transparent"
       speed="1"                                                                             style="width: 28px; height: 28px; margin-bottom: 2px;"
       loop
       autoplay>
