--- a/views/tamu.html
+++ b/views/tamu.html
@@ -352,18 +352,24 @@
     </div>
      <div class="nav" id="nav-jadwal" onclick="switchTab('jadwal')">
     <dotlottie-player
-      src="/assets/masjid.json"                                                               background="transparent"
-      speed="1.5"                                                                             style="width: 28px; height: 28px; margin-bottom: 2px;"
+      src="/assets/masjid.json"
+      background="transparent"
+      speed="1.5"
+      style="width: 28px; height: 28px; margin-bottom: 2px;"
       loop
-      autoplay>                                                                             </dotlottie-player>
+      autoplay>
+    </dotlottie-player>
     <span>Shalat</span>
     </div>
     <div class="nav" id="nav-quran" onclick="switchTab('quran')">
     <dotlottie-player
-      src="/assets/book.json"                                                               background="transparent"
-      speed="1"                                                                             style="width: 28px; height: 28px; margin-bottom: 2px;"
+      src="/assets/book.json"
+      background="transparent"
+      speed="1"
+      style="width: 28px; height: 28px; margin-bottom: 2px;"
       loop
       autoplay>
+    </dotlottie-player>
       <span>Qur'an</span>
     </div>
     <div class="nav">
