--- a/views/tamu.html
+++ b/views/tamu.html
@@ -381,7 +381,15 @@
       <span>Qur'an</span>
     </div>
      <div class="nav logout" id="nav-logout" onclick="logout()">
-      🚪<span>Keluar</span>
+     <dotlottie-player
+       src="/assets/door.json"
+       background="transparent"
+       speed="1"
+       style="width: 28px; height: 28px; margin-bottom: 2px;"
+       loop
+       autoplay>
+     </dotlottie-player>
+      <span>Keluar</span>
      </div>
   </nav>
 
