--- a/views/tamu.html
+++ b/views/tamu.html
@@ -73,7 +73,9 @@
     </section>
 
     <section class="menu-grid">
-      <div class="menu-item" onclick="switchTab('dzikir')">🙏<p>Dzikir & Doa</p></div>
+      <section class="menu-grid"> <div class="menu-item" onclick="switchTab('dzikir')">
+      <dotlottie-player src="/assets/pray.json" background="transparent" speed="1" style="width: 40px; height: 40px;" loop autoplay></dotlottie-player>
+      <p>Dzikir & Doa</p> </div>
       <div class="menu-item" onclick="location.href='/raport'">📕<p>Raport Santri</p></div>
       <div class="menu-item" onclick="location.href='/kamar'">🛏️<p>Kamar Santri</p></div>
       <div class="menu-item">📖👥<p>Halaqah Qur'an</p></div>
